posiGen_FullsendBox/src/objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Note__c</fullName>
        <label>Bill Note</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_On_Date__c</fullName>
        <label>Billed On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Link__c</fullName>
        <label>Invoice Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Need to Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to Resubmit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Accounting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Acronym__c</fullName>
        <formula>Vendor__r.Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Bill_Number__c</fullName>
        <inlineHelpText>This is the Vendor&apos;s Invoice Number to PG.</inlineHelpText>
        <label>Vendor Bill Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Company Billing PosiGen</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Billed_On_Date__c</columns>
        <columns>Vendor_Bill_Number__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>